--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,23 +1,3 @@
-# Copyright (c) 2016-2023 Martin Donath <martin.donath@squidfunk.com>
-
-# Permission is hereby granted, free of charge, to any person obtaining a copy
-# of this software and associated documentation files (the "Software"), to
-# deal in the Software without restriction, including without limitation the
-# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
-# sell copies of the Software, and to permit persons to whom the Software is
-# furnished to do so, subject to the following conditions:
-
-# The above copyright notice and this permission notice shall be included in
-# all copies or substantial portions of the Software.
-
-# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
-# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
-# IN THE SOFTWARE.
-
 # Project information
 site_name: Markdown语法详解(基于mkdocs-material)
 site_url: https://iogogogo.github.io/markdown-with-mkdocs-material
@@ -91,12 +71,21 @@ plugins:
 hooks:
   - material/.overrides/hooks/translations.py
 
+# 设置
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/iogogogo
+      name: github
+    - icon: fontawesome/brands/slack
+      link: https://iogogogo.github.io
+      name: blog
+
 # Customization
 extra_css:
   - assets/stylesheets/extra.css
 extra_javascript:
   - assets/javascripts/extra.js
-  - assets/javascripts/baidu-tongji.js
 
 # Extensions
 markdown_extensions:
